Styling LIs made the dots too big, fixing

--- a/style.scss
+++ b/style.scss
@@ -422,9 +422,9 @@ main {
 						display: inline-block;
 						background: #C9C9C9;
 						border-radius: 50%;
-						height: .8em;
+						height: .7em;
 						margin-top: .3em;
-						width: .8em;
+						width: .7em;
 					}
 				}
 			}
